--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-offline": "^5.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.0",
+    "gatsby-plugin-sitemap": "^5.5.0",
     "gatsby-source-filesystem": "^4.5.0",
     "gatsby-transformer-sharp": "^4.5.0",
     "prop-types": "^15.8.0",
