--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.5.1",
     "gatsby-plugin-gatsby-cloud": "^4.5.0",
     "gatsby-plugin-image": "^2.5.0",
@@ -17,6 +18,7 @@
     "gatsby-transformer-sharp": "^4.5.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
